Cleared out some swp files and added files to visualize nk_problem 12-bit and 0 kval superimposed on the full sbc hypercube. Also updated html to read nk_problem directory - needs to be settable at run time from web app

--- a/d3_examples/test_force_graph_2d.html
+++ b/d3_examples/test_force_graph_2d.html
@@ -156,7 +156,8 @@
 
     function add_landscape(file_name){
 //      d3.json("./toy_problem_2/" + file_name).then(function(data){
-      d3.json("./knapsack_problem/" + file_name).then(function(data){
+//      d3.json("./knapsack_problem/" + file_name).then(function(data){
+      d3.json("./nk_problem/" + file_name).then(function(data){
 
         const links = data.links.map(d => Object.create(d));
         const nodes = data.nodes.map(d => Object.create(d));
