--- a/d3_examples/test_force_graph_2d_nk.html
+++ b/d3_examples/test_force_graph_2d_nk.html
@@ -305,7 +305,8 @@
         button.style.borderStyle = "outset";
         d3.selectAll("circle").on("click", null);
         d3.selectAll("line")
-        .style("stroke", function(d){return contrast_colors[d.boa_color_index]});
+        .style("stroke", function(d){return contrast_colors[d.boa_color_index]})
+        .style("stroke-width", function(d) {return link_width*d.eigen_val});
       }
     }
  
@@ -317,6 +318,13 @@
             return contrast_colors[d.boa_color_index];
           } else {
             return "CCC";
+          }
+        })
+        .style("stroke-width", function(d){
+          if (d.boa_peak == node.id){
+            return link_width*d.eigen_val*2;
+          } else {
+            return link_width*d.eigen_val;
           }
         });
       }
