--- a/d3_examples/test_force_graph_2d_nk.html
+++ b/d3_examples/test_force_graph_2d_nk.html
@@ -112,8 +112,7 @@
 
     var num_landscapes = 0;
     var color_array = ["Red","Orange","Yellow","Green","Blue","Purple","White"];
-    var contrast_colors = ["rgb(255,0,0)", "rgb(0,255,0)", "rgb(0,0,255)", "rgb(26,29,51)", "rgb(217,0,145)", "rgb(29,131,62)", "rgb(255,238,0)", "rgb(32,128,96)", "rgb(22,22,89)", "rgb(255,191,234)", "rgb(0,255,170)", "rgb(134,179,164)", "rgb(57,57,115)", "rgb(128,64,98)", "rgb(204,116,102)", "rgb(226,230,172)", "rgb(128,255,246)", "rgb(51,0,128)", "rgb(255,0,102)", "rgb(102,65,51)", "rgb(204,255,0)", "rgb(0,60,64)", "rgb(206,182,242)", "rgb(217,108,152)", "rgb(255,208,191)", "rgb(229,255,128)", "rgb(41,157,166)", "rgb(65,57,77)", "rgb(51,38,43)", "rgb(242,133,61)", "rgb(51,77,0)", "rgb(29,98,115)", "rgb(136,0,255)", "rgb(191,0,51)", "rgb(64,35,16)", "rgb(138,166,83)", "rgb(0,43,64)", "rgb(143,48,191)", "rgb(89,22,31)", "rgb(217,152,108)", "rgb(108,128,96)", "rgb(121,202,242)", "rgb(138,83,166)", "rgb(166,83,94)", "rgb(140,75,0)", "rgb(98,217,54)", "rgb(32,83,128)", "rgb(76,22,89)", "rgb(230,172,180)", "rgb(217,191,163)", "rgb(62,77,57)", "rgb(115,135,153)", "rgb(226,0,242)", "rgb(89,67,70)", "rgb(115,101,86)", "rgb(0,115,15)", "rgb(0,76,191)", "rgb(247,128,255)", "rgb(51,34,0)", "rgb(96,191,121)", "rgb(102,143,204)", "rgb(51,0,48)", "rgb(255,191,64)", "rgb(191,255,217)", "rgb(0,25,191)", "rgb(166,124,163)", "rgb(166,124,41)", "rgb(0,64,34)", "rgb(128,145,255)", "rgb(140,0,112)"];
-//    var contrast_colors = ["rgb(217,54,54)", "rgb(184,217,163)", "rgb(115,120,153)", "rgb(140,35,35)", "rgb(37,140,0)", "rgb(51,51,204)", "rgb(255,191,191)", "rgb(38,51,38)", "rgb(34,0,255)", "rgb(255,145,128)", "rgb(61,242,85)", "rgb(17,0,128)", "rgb(217,58,0)", "rgb(0,51,14)", "rgb(94,83,166)", "rgb(76,20,0)", "rgb(105,140,115)", "rgb(60,57,77)", "rgb(178,113,89)", "rgb(0,115,61)", "rgb(31,0,77)", "rgb(255,140,64)", "rgb(0,242,162)", "rgb(184,163,217)", "rgb(115,63,29)", "rgb(0,179,143)", "rgb(166,108,217)", "rgb(217,184,163)", "rgb(0,255,238)", "rgb(184,0,230)", "rgb(153,82,0)", "rgb(19,77,73)", "rgb(109,86,115)", "rgb(255,166,64)", "rgb(134,179,176)", "rgb(128,32,121)", "rgb(51,39,26)", "rgb(121,234,242)", "rgb(64,0,51)", "rgb(115,101,86)", "rgb(0,204,255)", "rgb(242,61,206)", "rgb(89,60,0)", "rgb(0,133,166)", "rgb(179,89,149)", "rgb(178,149,89)", "rgb(0,170,255)", "rgb(178,0,95)", "rgb(255,234,191)", "rgb(0,85,128)", "rgb(230,172,203)", "rgb(51,41,0)", "rgb(16,48,64)", "rgb(115,0,46)", "rgb(229,218,57)", "rgb(77,94,102)", "rgb(255,64,115)", "rgb(145,153,38)", "rgb(0,129,242)", "rgb(51,38,42)", "rgb(99,102,51)", "rgb(182,214,242)", "rgb(64,0,9)", "rgb(170,255,0)", "rgb(19,42,77)", "rgb(178,89,101)", "rgb(212,255,128)", "rgb(0,14,51)", "rgb(102,51,58)", "rgb(41,77,0)", "rgb(29,40,115)", "rgb(166,124,130)"];
+    var contrast_colors = ["rgb(255,0,0)", "rgb(0,255,0)", "rgb(0,0,255)", "rgb(26,29,51)", "rgb(217,0,145)", "rgb(29,131,62)", "rgb(255,238,0)", "rgb(32,128,96)", "rgb(22,22,89)", "rgb(255,191,234)", "rgb(0,255,170)", "rgb(134,179,164)", "rgb(57,57,115)", "rgb(128,64,98)", "rgb(204,116,102)", "rgb(226,230,172)", "rgb(128,255,246)", "rgb(51,0,128)", "rgb(255,0,102)", "rgb(102,65,51)", "rgb(204,255,0)", "rgb(0,60,64)", "rgb(206,182,242)", "rgb(217,108,152)", "rgb(255,208,191)", "rgb(229,255,128)", "rgb(41,157,166)", "rgb(65,57,77)", "rgb(51,38,43)", "rgb(242,133,61)", "rgb(51,77,0)", "rgb(29,98,115)", "rgb(136,0,255)", "rgb(191,0,51)", "rgb(64,35,16)", "rgb(138,166,83)", "rgb(0,43,64)", "rgb(143,48,191)", "rgb(89,22,31)", "rgb(217,152,108)", "rgb(108,128,96)", "rgb(121,202,242)", "rgb(138,83,166)", "rgb(166,83,94)", "rgb(140,75,0)", "rgb(98,217,54)", "rgb(32,83,128)", "rgb(76,22,89)", "rgb(230,172,180)", "rgb(217,191,163)", "rgb(62,77,57)", "rgb(115,135,153)", "rgb(226,0,242)", "rgb(89,67,70)", "rgb(115,101,86)", "rgb(0,115,15)", "rgb(0,76,191)", "rgb(247,128,255)", "rgb(51,34,0)", "rgb(96,191,121)", "rgb(102,143,204)", "rgb(51,0,48)", "rgb(255,191,64)", "rgb(191,255,217)", "rgb(0,25,191)", "rgb(166,124,163)", "rgb(166,124,41)", "rgb(0,64,34)", "rgb(128,145,255)", "rgb(140,0,112)","rgb(217,54,54)", "rgb(184,217,163)", "rgb(115,120,153)", "rgb(140,35,35)", "rgb(37,140,0)", "rgb(51,51,204)", "rgb(255,191,191)", "rgb(38,51,38)", "rgb(34,0,255)", "rgb(255,145,128)", "rgb(61,242,85)", "rgb(17,0,128)", "rgb(217,58,0)", "rgb(0,51,14)", "rgb(94,83,166)", "rgb(76,20,0)", "rgb(105,140,115)", "rgb(60,57,77)", "rgb(178,113,89)", "rgb(0,115,61)", "rgb(31,0,77)", "rgb(255,140,64)", "rgb(0,242,162)", "rgb(184,163,217)", "rgb(115,63,29)", "rgb(0,179,143)", "rgb(166,108,217)", "rgb(217,184,163)", "rgb(0,255,238)", "rgb(184,0,230)", "rgb(153,82,0)", "rgb(19,77,73)", "rgb(109,86,115)", "rgb(255,166,64)", "rgb(134,179,176)", "rgb(128,32,121)", "rgb(51,39,26)", "rgb(121,234,242)", "rgb(64,0,51)", "rgb(115,101,86)", "rgb(0,204,255)", "rgb(242,61,206)", "rgb(89,60,0)", "rgb(0,133,166)", "rgb(179,89,149)", "rgb(178,149,89)", "rgb(0,170,255)", "rgb(178,0,95)", "rgb(255,234,191)", "rgb(0,85,128)", "rgb(230,172,203)", "rgb(51,41,0)", "rgb(16,48,64)", "rgb(115,0,46)", "rgb(229,218,57)", "rgb(77,94,102)", "rgb(255,64,115)", "rgb(145,153,38)", "rgb(0,129,242)", "rgb(51,38,42)", "rgb(99,102,51)", "rgb(182,214,242)", "rgb(64,0,9)", "rgb(170,255,0)", "rgb(19,42,77)", "rgb(178,89,101)", "rgb(212,255,128)", "rgb(0,14,51)", "rgb(102,51,58)", "rgb(41,77,0)", "rgb(29,40,115)", "rgb(166,124,130)"];
     var color_index = 0;
     var svg_list = {};
 
@@ -172,7 +171,7 @@
           .selectAll("line")
           .data(links)
           .enter().append("line")
-          .attr("stroke", function(d) {return contrast_colors[d.boa_color_index];})
+          .attr("stroke", function(d) {return select_boa_color(d.boa_color_index);})
           .attr("stroke-opacity", function(d) {return d.fit_val})
           .attr("stroke-width", function(d) {return link_width*d.eigen_val});
 //          .attr("stroke", function(d) {return select_boa_color(d.boa_color_index);})
@@ -239,16 +238,19 @@
     }
 
     function select_boa_color(index){
-      rgb_val = [0, 0, 0];
+      rgb_val = [160,160,160];
       if (index < 0) {
-        return '"rgb(' + rgb_val[0] + ',' + rgb_val[1] + ',' + rgb_val[2] + ')"';
+        return 'rgb(' + rgb_val[0] + ',' + rgb_val[1] + ',' + rgb_val[2] + ')';
+      } else if (index < contrast_colors.length){
+        return contrast_colors[index];
       } else {
-        Math.seed = (index+3)*2;
+        Math.seed = index;
         rgb_val[0] = parseInt(Math.seededRandom(256,0));
         rgb_val[1] = parseInt(Math.seededRandom(256,0));
         rgb_val[2] = parseInt(Math.seededRandom(256,0));
       }
       rgb_string = "rgb(" + rgb_val[0] + "," + rgb_val[1] + "," + rgb_val[2] + ")";
+      console.log(index + " has color: " + rgb_string);
       return rgb_string;
     }
 /*
@@ -315,7 +317,7 @@
         d3.selectAll("line")
         .style("stroke", function(d){
           if (d.boa_peak == node.id){
-            return contrast_colors[d.boa_color_index];
+            return select_boa_color(d.boa_color_index);
           } else {
             return "CCC";
           }
